# flipjump-docs

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: SETUP.md  dependabot.yml
.github/workflows/: deploy.yml  jetbrains-plugin.yml  pr-build.yml  submodule-bump.yml
docs/: Makefile  fix-security-fail.txt  fix-security-pass.txt  make.bat  requirements.txt
docs/_ext/fj_stl_extract/: __init__.py  __main__.py  dep_graph.py  doc_attach.py  parser.py  pipeline.py  pygments_lexer.py  pygments_style.py  renderer.py  sphinx_ext.py  tokenizer.py
docs/_ext/seo/: __init__.py
docs/source/: 404.md  conf.py  index.md
docs/source/_extra/: ALGOLIA_README.md  robots.txt
docs/source/_static/: custom.css  flipjump-vscode.vsix
editors/: README.md  colors.mjs  flipjump-dark.tmTheme  grammar.mjs  package-lock.json  package.json  sync.mjs
editors/grammars/: flipjump.tmLanguage.json
editors/jetbrains/: README.md  package.json
editors/jetbrains-plugin/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/test/: fixtures.mjs  render-preview.mjs  verify-scopes.mjs
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  extension.js  language-configuration.json  package.json
tests/: conftest.py  test_scaffold.py  test_seo.py  test_workflows.py
tests/test_extractor/: test_cli.py  test_dep_graph.py  test_doc_attach.py  test_parser.py  test_pipeline_against_stl.py  test_pygments_lexer.py  test_renderer.py  test_tokenizer.py  test_vscode_grammar_parity.py
(+67 files in other folders)
