[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flipjump-docs-tooling"
version = "0.0.0"
description = "Tooling for building the FlipJump documentation site"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers --strict-config"
