[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flipjump-docs-tooling"
version = "0.0.0"
description = "Tooling for building the FlipJump documentation site"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pyyaml>=6,<7",
]

# The STL extractor lives under docs/_ext/ as a Python package. Telling
# setuptools where to find it makes `pip install -e .` expose it as
# importable from anywhere (tests, the Sphinx extension hook in conf.py).
[tool.setuptools]
package-dir = {"" = "docs/_ext"}

[tool.setuptools.packages.find]
where = ["docs/_ext"]
include = ["fj_stl_extract*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers --strict-config"
